@@ -1,4 +1,4 @@
-.TH PCRE2SYNTAX 3 "22 April 2015" "PCRE2 10.20"
+.TH PCRE2SYNTAX 3 "23 April 2015" "PCRE2 10.20"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .SH "PCRE2 REGULAR EXPRESSION SYNTAX SUMMARY"
@@ -19,7 +19,7 @@ documentation. This document contains a quick-reference summary of the syntax.
   \eQ...\eE    treat enclosed characters as literal
 .
 .
-.SH "CHARACTERS"
+.SH "ESCAPED CHARACTERS"
 .rs
 .sp
   \ea         alarm, that is, the BEL character (hex 07)
@@ -32,17 +32,28 @@ documentation. This document contains a quick-reference summary of the syntax.
   \e0dd       character with octal code 0dd
   \eddd       character with octal code ddd, or backreference
   \eo{ddd..}  character with octal code ddd..
-  \eU         "U" if PCRE2_ALT_BSUX is set (otherwise is an error) 
+  \eU         "U" if PCRE2_ALT_BSUX is set (otherwise is an error)
   \euhhhh     character with hex code hhhh (if PCRE2_ALT_BSUX is set)
-  \exhh       character with hex code hh 
+  \exhh       character with hex code hh
   \ex{hhh..}  character with hex code hhh..
 .sp
-Note that \e0dd is always an octal code, and that \e8 and \e9 are the literal
-characters "8" and "9". When \ex is not followed by {, from zero to two 
-hexadecimal digits are read, but if PCRE2_ALT_BSUX is set, \ex must be followed 
-by two hexadecimal digits to be recognized as a hexadecimal escape; otherwise 
-it matches a literal "x". Likewise, if \eu (in ALT_BSUX mode) is not followed 
-by four hexadecimal digits, it matches a literal "u".
+Note that \e0dd is always an octal code. The treatment of backslash followed by
+a non-zero digit is complicated; for details see the section
+.\" HTML <a href="pcre2pattern.html#digitsafterbackslash">
+.\" </a>
+"Non-printing characters"
+.\"
+in the
+.\" HREF
+\fBpcre2pattern\fP
+.\"
+documentation.
+.P
+When \ex is not followed by {, from zero to two hexadecimal digits are read,
+but if PCRE2_ALT_BSUX is set, \ex must be followed by two hexadecimal digits to
+be recognized as a hexadecimal escape; otherwise it matches a literal "x".
+Likewise, if \eu (in ALT_BSUX mode) is not followed by four hexadecimal digits,
+it matches a literal "u".
 .
 .
 .SH "CHARACTER TYPES"
@@ -329,7 +340,7 @@ but some of them use Unicode properties if PCRE2_UCP is set. You can use
   \eB          not a word boundary
   ^           start of subject
                 also after an internal newline in multiline mode
-                (after any newline if PCRE2_ALT_CIRCUMFLEX is set) 
+                (after any newline if PCRE2_ALT_CIRCUMFLEX is set)
   \eA          start of subject
   $           end of subject
                 also before newline at end of subject
@@ -407,8 +418,8 @@ appear.
   (*UCP)          set PCRE2_UCP (use Unicode properties for \ed etc)
 .sp
 Note that LIMIT_MATCH and LIMIT_RECURSION can only reduce the value of the
-limits set by the caller of pcre2_match(), not increase them. The application 
-can lock out the use of (*UTF) and (*UCP) by setting the PCRE2_NEVER_UTF or 
+limits set by the caller of pcre2_match(), not increase them. The application
+can lock out the use of (*UTF) and (*UCP) by setting the PCRE2_NEVER_UTF or
 PCRE2_NEVER_UCP options, respectively, at compile time.
 .
 .
@@ -530,9 +541,9 @@ pattern is not anchored.
   (?Cn)           callout with numerical data n
   (?C"text")      callout with string data
 .sp
-The allowed string delimiters are ` ' " ^ % # $ (which are the same for the 
-start and the end), and the starting delimiter { matched with the ending 
-delimiter }. To encode the ending delimiter within the string, double it.   
+The allowed string delimiters are ` ' " ^ % # $ (which are the same for the
+start and the end), and the starting delimiter { matched with the ending
+delimiter }. To encode the ending delimiter within the string, double it.
 .
 .
 .SH "SEE ALSO"
@@ -556,6 +567,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 22 April 2015
+Last updated: 23 April 2015
 Copyright (c) 1997-2015 University of Cambridge.
 .fi
